--- a/css/section-projects.css
+++ b/css/section-projects.css
@@ -15,8 +15,9 @@
 }
 .projects h2 {
     text-align: center;
-    font-size: 4rem;
+    font-size: 3rem;
     color:  rgb(19, 19, 31);
+    font-family: sans-serif;
 }
 .projects .carousel-content{
     display: flex;
@@ -106,9 +107,9 @@
     transform: scale(1.2);
 }
 
-@media screen and (min-width: 400px)  and (max-width: 500px) {
+@media screen and (min-width: 400px)  and (max-width: 599px) {
     .projects .max-width {
-        transform: translateX(-50px); 
+        transform: translateX(-30px); ; 
     }
     .projects {
         height: 70vh;
@@ -150,7 +151,7 @@
 }
 @media screen and (min-width: 300px)  and (max-width: 399px) {
     .projects .max-width {
-        transform: translateX(-50px); 
+        transform: translateX(-30px); 
     }
     .projects {
         height: 80vh;
