--- a/css/section-projects.css
+++ b/css/section-projects.css
@@ -30,8 +30,12 @@
     position: relative;
     overflow: hidden;
 }
+.carousel-content .image-project{
+    max-width: 100%;
+}
 .carousel-content .image-project img{
     max-width: 50rem;
+    object-fit: cover;
 }
 .carousel-content h3 {
     font-size: 1.3rem;
@@ -40,7 +44,7 @@
 .carousel-content p{
     margin-top: 1rem;
     color: #fff;
-    max-width: 90%;
+    max-width: 80%;
 }
 .carousel-content a{
     display: inline-block;
@@ -71,13 +75,14 @@
 }
 .language-produced p{
     text-align: center;
+
 }
 .carousel-content .carousel-track {
     display: flex;
     transition: transform 0.5s ease-in-out;
 }
 .carousel-track .slide {
-    min-width: 100%;
+    flex: 0 0 100%;
     padding: 1rem;
     display: flex;
     gap: 2rem;
@@ -107,32 +112,35 @@
 #arrow-right:hover {
     transform: scale(1.2);
 }
+@media screen and (min-width: 500px)  and (max-width: 599px) {
 
-@media screen and (min-width: 400px)  and (max-width: 599px) {
     .projects .max-width {
         transform: translateX(-30px); ; 
     }
     .projects {
-        height: 70vh;
+        height: 90vh;
     }
     .projects h2 {
         font-size: 2rem;
     }
     .projects .carousel-content{
-        gap: 3rem;
+        gap: 2rem;
         margin-top: 2rem;
         padding: 1rem 0;
+        min-width: 100%;
     }
     .carousel-content .image-project img{
         max-width: 100%;
     }
     .carousel-track .slide {
-        padding: 0;
         flex-direction: column;
         gap: 1rem;  
+        padding: 0;
+        max-width: 70%;
     }
     .carousel-content p{
         text-align: center;
+        max-width: 95%;
     }
     .carousel-content h3 {
         font-size: 1rem;
@@ -140,9 +148,55 @@
         text-align: center;
     }
     .carousel-content a{
+        min-width: 50%;
+        margin-left: 7rem;
         text-align: center;
-        min-width: 80%;
-        margin-left: 2rem;
+    }
+    .language-produced {
+        padding-top: 0.5rem;
+       justify-content: center;
+    }
+}
+@media screen and (min-width: 400px)  and (max-width: 499px) {
+
+    .projects .max-width {
+        transform: translateX(-30px); ; 
+    }
+    .projects {
+        height: 90vh;
+    }
+    .projects h2 {
+        font-size: 2rem;
+    }
+    .projects .carousel-content{
+        gap: 2rem;
+        margin-top: 2rem;
+        padding: 1rem 0;
+        min-width: 100%;
+    }
+    .carousel-content .image-project img{
+        max-width: 100%;
+    }
+    .carousel-track .slide {
+        flex-direction: column;
+        gap: 1rem;  
+        padding: 0;
+        max-width: 55%;
+    }
+    .carousel-content p{
+        text-align: center;
+        max-width: 95%;
+    }
+    .carousel-content h3 {
+        font-size: 1rem;
+        color: rgb(40, 148, 236);
+        text-align: center;
+    }
+    .carousel-content a{
+        min-width: 50%;
+        margin-left: 5rem;
+        text-align: center;
+
     }
     .language-produced {
         padding-top: 0.5rem;
@@ -152,50 +206,48 @@
 }
 @media screen and (min-width: 300px)  and (max-width: 399px) {
     .projects .max-width {
-        transform: translateX(-30px); 
+        transform: translateX(-30px); ; 
     }
     .projects {
-        height: 80vh;
+        height: 100vh;
     }
     .projects h2 {
         font-size: 2rem;
     }
     .projects .carousel-content{
-        gap: 3rem;
+        gap: 2rem;
         margin-top: 2rem;
         padding: 1rem 0;
 
     }
     .carousel-content .image-project img{
         max-width: 100%;
-
     }
     .carousel-track .slide {
-        padding: 0;
         flex-direction: column;
         gap: 1rem;  
+        padding: 0;
+        max-width: 50%;
+    }
+    .carousel-content h3 {
+        font-size: 0.9rem;
+        color: rgb(40, 148, 236);
+        text-align: center;
     }
     .carousel-content p{
         text-align: center;
-        font-size: 0.7rem;
-    }
-    .carousel-content h3 {
-        font-size: 0.7rem;
-        text-align: center;
-
+        max-width: 95%;
+        font-size: 0.9rem;
     }
     .carousel-content a{
-        min-width: 70%;
-        margin-left: 2.5rem;
+        min-width: 50%;
+        margin-left: 5rem;
         text-align: center;
-
     }
-    .language-produced{
-        justify-content: center;
-    }
-    .language-produced img {
-        max-width: 2.1rem;
-    
+    .language-produced {
+        padding-top: 0.5rem;
+       justify-content: center;
     }
 
 }
+
